--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -25,5 +26,8 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "pg": "^8.6.0"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
