--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -26,8 +25,5 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "pg": "^8.6.0"
-  },
-  "engines": {
-    "node": "14.x"
   }
 }
